# music_room

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DESIGN.md  Dockerfile.server  Dockerfile.web  LICENSE  README.md  README.zh-CN.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.codex-tmp/update-latest-v0.2.8/: Music.Room.app.tar.gz.sig  Music.Room_0.2.8_amd64.AppImage.sig  Music.Room_0.2.8_x64-setup.exe.sig
.codex-tmp/update-latest-v0.2.8-verify/: latest.json
.github/workflows/: release-desktop.yml  server-web-ci.yml
.tmp/: auth-fallback-store.json
.tmp/trace-two-user/: 0-trace.stacks  0-trace.trace  1-trace.network  1-trace.stacks  1-trace.trace  test.trace
.tmp/trace-two-user-retry1/: 0-trace.stacks  0-trace.trace  1-trace.network  1-trace.stacks  1-trace.trace  test.trace
apps/desktop/: electron-builder.yml  package.json  tsconfig.json
apps/desktop/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/permissions/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/mobile/: .gitignore  capacitor.config.ts  package.json  tsconfig.json
apps/server/: jest.config.cjs  package.json  (+1 more)
docs/: README.md
scripts/: build-desktop-web.mjs  check-env-sync.mjs  check-toolchain.mjs  deploy-check.mjs  deploy-linux.sh  e2e-run-server.mjs  patch-next-standalone-symlink-fallback.mjs  require-public-origin.mjs  update-release-asset-labels.mjs  write-tauri-latest-json.mjs  write-tauri-latest-json.test.mjs
(+716 files in other folders)
