[package]
name = "music-room-desktop"
version = "0.2.8"
description = "Music Room desktop shell powered by Tauri"
authors = ["witw123"]
license = "MIT"
repository = "https://github.com/witw123/music_room"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "music_room_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
open = "5"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
url = "2"
